--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,285 @@
-/* место для вашего кода */
+.header {
+  display: grid;
+  padding: 92px 24px 94px 24px;
+  align-items: center;
+  grid-template-columns: 1fr auto 1fr;
+}
+
+.header__menu-list {
+  list-style: circle;
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  font-weight: 400;
+  font-size: 18px;
+  white-space: nowrap;
+  justify-content: center;
+}
+
+.header__menu-item_active {
+  text-decoration: none;
+  list-style-type: none;
+}
+
+.header__logo-image {
+  height: 105px;
+  width: 148px;
+}
+
+.address {
+  all: unset;
+  display: flex;
+  flex-direction: column;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 135%;
+  padding-left: 184px;
+}
+
+.cover {
+  height: 757px;
+  margin-bottom: 179px;
+  background-image: url(../images/cover.jpg);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.cover__title {
+  padding-top: 165px;
+  padding-bottom: 147px;
+  padding-right: 50px;
+  display: flex;
+  flex-direction: column;
+  font-weight: 700;
+  font-size: 100px;
+  padding-left: 50px;
+  text-transform: uppercase;
+  color: #ffffff;
+  position: relative;
+}
+
+.accent-span {
+  display: block;
+  letter-spacing: 0.3em;
+}
+
+.accent-span-o {
+  letter-spacing: 0px;
+}
+
+.accent-span-cover__text-center {
+  text-align: center;
+  font-weight: 700;
+  font-size: 100px;
+  line-height: 100%;
+  letter-spacing: 0.3em;
+  /* line-height: 140px; */
+}
+
+.accent-span-cover__text-right {
+  font-weight: 700;
+  font-size: 100px;
+  line-height: 100%;
+  letter-spacing: 0.3em;
+  text-transform: uppercase;
+  text-align: right;
+  /* line-height: 100px; */
+}
+
+.cover__description__bet-button {
+  position: relative;
+  font-weight: 500;
+  font-size: 22px;
+  text-transform: uppercase;
+  text-align: center;
+  color: #fff;
+  border: 1px solid #fff;
+  width: 256px;
+  height: 51px;
+  background-color: transparent;
+  margin-bottom: 62px;
+}
+.cover__description {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.cover__description-text {
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 127%;
+  text-transform: uppercase;
+  color: #ffffff;
+  padding-left: 78px;
+  padding-right: 80px;
+  word-spacing: 0.8em;
+  padding-bottom: 62px;
+}
+
+.lots {
+  padding-left: 24px;
+  position: relative;
+  padding-bottom: 146px;
+}
+.lots__heading {
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+  padding-left: 40px;
+  padding-bottom: 27px;
+}
+
+.lots__card-list {
+  display: flex;
+  list-style: none;
+  gap: 25px;
+  padding-bottom: 30px;
+}
+
+.lots__card-list-item {
+  height: 563px;
+  width: 334px;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.card {
+  display: flex;
+  padding: 51px 40px 48px 40px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card__title {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 120%;
+  text-transform: uppercase;
+  color: #fff;
+  z-index: 1;
+}
+
+.card__text {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+  color: #fff;
+  z-index: 1;
+}
+
+.lots__look-more-link {
+  font-weight: 400;
+  font-size: 20px;
+  color: #000;
+  padding-left: 40px;
+}
+
+.about {
+  padding: 0px 24px 160px 24px;
+}
+.about__column {
+  display: grid;
+  list-style: none;
+  grid-template-columns: 334px 2fr;
+  justify-items: center;
+  padding-top: 35px;
+  gap: 20px;
+}
+
+.about__logo {
+  background-color: #000;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  background-image: url(../images/logo-white.svg);
+  background-size: 148px 114px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.about__title {
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+  color: #000;
+  padding-bottom: 100px;
+  padding-top: 100px;
+}
+
+.about__text {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: 0.01em;
+  color: #000;
+  padding-bottom: 24px;
+}
+
+.footer {
+  list-style-type: none;
+  padding: 0 50px 88px 50px;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+}
+
+.footer_list {
+  list-style-type: none;
+}
+.footer__menu-list {
+  text-decoration: none;
+  list-style-type: none;
+  text-align: center;
+}
+
+.footer__menu-item_active {
+  list-style-type: none;
+  text-decoration: none;
+}
+
+.footer__icons {
+  justify-self: end;
+  display: flex;
+  flex-direction: row;
+  gap: 48px;
+  list-style-type: none;
+}
+
+.footer_icons_img {
+  width: 48px;
+  height: 48px;
+}
+.address__footer {
+  all: unset;
+  display: flex;
+  flex-direction: column;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 135%;
+}
