--- a/styles/style.css
+++ b/styles/style.css
@@ -80,7 +80,6 @@
   font-size: 100px;
   line-height: 100%;
   letter-spacing: 0.3em;
-  line-height: 140px;
 }
 
 .accent-span-cover__text-right {
@@ -90,7 +89,6 @@
   letter-spacing: 0.3em;
   text-transform: uppercase;
   text-align: right;
-  line-height: 100px;
 }
 
 .cover__description__bet-button {
@@ -244,9 +242,6 @@
 
 .footer {
   list-style-type: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   padding: 0 50px 88px 50px;
   display: grid;
   grid-template-columns: 1fr auto 1fr;
@@ -271,6 +266,7 @@
   display: flex;
   flex-direction: row;
   gap: 48px;
+  list-style-type: none;
 }
 
 .footer_icons_img {
